@@ -1,3 +1,11 @@
+2001-05-10  Christian Stimming  <stimming@tuhh.de>
+
+	* src/engine/gnc-pricedb.c (gnc_pricedb_lookup_nearest_in_time):
+	Fixed this function so that it works properly now.
+
+	* src/scm/commodity-utilities.scm
+	(gnc:get-match-commodity-splits): fix bug.
+
 2001-05-09  Dave Peticolas  <dave@krondo.com>
 
 	* src/doc/design/engine.texinfo: update docs
